--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,34 @@
+* {
+  font-family: 'Abril Fatface', cursive;
+}
+
+body {
+  background: url('http://3.bp.blogspot.com/-sxLTucJgKXU/ToC8W7XFugI/AAAAAAAAlrk/SKt7ThO8Cq4/s1600/Fuegos-Artificiales-Fireworks---6.jpg');
+  background-repeat: no-repeat;
+}
+
 textarea {
-  background-color: bisque;
-  width: 400px;
-  height: 200px;
+  background-color: pink;
+  width: 290px;
+  height: 130px;
   border: none;
+}
+
+h1,
+h2 {
+  color: white;
+  font: 900;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#box {
+  padding: 30px 500px 50px 500px;
+}
+
+#btn {
+  background-color: rgb(228, 172, 216);
+  color: white;
+  height: 50px;
+  width: 100px;
 }
